--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,41 @@
-.app-container {
+button {
+  width: 200px;
+}
 
+.app-main {
+  display: flex;
+  flex-flow: column nowrap;
+  min-height: 100vh;
+}
+
+.app-container {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  margin-top: 20px;
 }
 
 .content-container{
-
+  display: flex;
+  flex-flow: column nowrap;
+  width: 40%;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 30px;
+  margin: 5px;
 }
 
-.clean-cart-button {
-  
+.clear-button {
+ margin-top: 40px;
+}
+
+.product-buttons {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  width: 40%;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 30px;
+  margin: 5px;
 }
