--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,20 @@ button {
   width: 200px;
 }
 
-.app-main {
+.main {
   display: flex;
   flex-flow: column nowrap;
   min-height: 100vh;
 }
 
-.app-container {
+.container {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-around;
   margin-top: 20px;
 }
 
-.content-container{
+.content {
   display: flex;
   flex-flow: column nowrap;
   width: 40%;
@@ -25,8 +25,12 @@ button {
   margin: 5px;
 }
 
+.content-container h2 {
+  margin-bottom: 20px;
+}
+
 .clear-button {
- margin-top: 40px;
+  margin-top: 40px;
 }
 
 .product-buttons {
@@ -38,4 +42,31 @@ button {
   border-radius: 5px;
   padding: 30px;
   margin: 5px;
+  align-items: flex-start;
+  margin-left: 5px;
+  margin-bottom: 20px;
+}
+
+.product-buttons div {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  width: 100%;
+}
+
+.product-buttons button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  font-size: 16px;
+  width: 100%;
+  height: 120px;
+}
+
+.product-buttons img {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 5px;
 }
