--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+h2 {
+  margin-bottom: 20px;
+}
+
 button {
   width: 200px;
 }
@@ -38,6 +42,7 @@ button {
   flex-flow: column nowrap;
   align-items: center;
   width: 40%;
+  height: 500px;
   border: 1px solid black;
   border-radius: 5px;
   padding: 30px;
